//
//  GOJConstants.swift
//  GOJAssignment
//
//  Created by Deepak Singh on 23/11/19.
//  Copyright © 2019 Deepak Singh. All rights reserved.
//


import UIKit

struct GOJImageConstants {
    static let placeholderImage: String = "placeholder_photo"
    static let favSelectedImage: String = "favourite_button_selected"
    static let favUnselectedImage: String = "favourite_button"

}

struct GOJColorConstants {
    static let applicationColor: UIColor = UIColor(red: 80.0/255.0, green: 227.0/255.0, blue: 194.0/255.0, alpha: 1.0)
}

struct GOJStringConstants {
    static let firstName: String = "First Name"
    static let lastName: String = "Last Name"
    static let mobile: String = "mobile"
    static let email: String = "email"
    static let error: String = "Error"
    static let ok: String = "OK"
    static let chooseImage: String = "Choose Image"
    static let camera: String = "Camera"
    static let gallery: String = "Gallery"
    static let cancel: String = "Cancel"
    static let invalidFirstName: String = "Enter Valid First Name"
    static let invalidLastName: String = "Enter Valid Last Name"
}
