...
                            <constraint firstItem="eN1-he-7yA" firstAttribute="bottom" secondItem="egr-E2-0I6" secondAttribute="bottom" id="bWs-K0-aoC"/>
                            <constraint firstItem="egr-E2-0I6" firstAttribute="leading" secondItem="eN1-he-7yA" secondAttribute="leading" id="glO-S7-jB1"/>
                            <constraint firstItem="egr-E2-0I6" firstAttribute="top" secondItem="eN1-he-7yA" secondAttribute="top" id="s7S-In-1o2"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="eN1-he-7yA"/>
                    </view>
                    <navigationItem key="navigationItem" title="Contact" id="xB9-hE-Uzb">
                        <barButtonItem key="leftBarButtonItem" title="Groups" id="vUE-nS-CW7"/>
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="4Vn-Gy-axl">
                            <connections>
                                <action selector="addAction:" destination="Nty-8h-rJh" id="VNN-cI-ACy"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
                                                    <rect key="frame" x="132.5" y="20" width="110" height="125"/>
                                                    <constraints>
                                                        <constraint firstAttribute="width" constant="110" id="Io4-Me-FMI"/>
                                                        <constraint firstAttribute="height" priority="999" constant="110" id="Pve-Et-8b7"/>
                                                    </constraints>
                                                </imageView>
                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="camera_button" translatesAutoresizingMaskIntoConstraints="NO" id="Q4f-JU-bms">
                                                    <rect key="frame" x="206.5" y="109" width="41" height="41"/>
                                                </imageView>
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="b7K-L2-mBZ">
                                                    <rect key="frame" x="132.5" y="20" width="110" height="125"/>
                                                    <connections>
                                                        <action selector="editImageAction:" destination="B7K-Pp-wF8" eventType="touchUpInside" id="Knr-fw-Avr"/>
...
